@startuml

package "engine" {
  class Engine
}
package "tool" {
  class Tool
}
package "result.test" {
  class TestResult
}
package "result.feature" {
  class FeatureResult
  class FeatureSetResult
  class GroupResult
  class LanguageResult
  class CapabilityResult

  class Measurement
  class Value

  Measurement - Value
  FeatureResult -- Measurement
  FeatureSetResult -- Measurement
  GroupResult -- Measurement
  LanguageResult -- Measurement
  CapabilityResult -- Measurement
}

package "benchmark.feature" {

	class Metric

	class Capability

	class Language

	class Group

	class FeatureSet

	class Feature

}

package "benchmark.test" {

	class Test

}

Measurement - Metric

TestResult - Test
TestResult -left- FeatureResult
Test -left- Feature

Feature "*" -right- "1" FeatureSet
FeatureSet "*" -right- "1" Group
Group "*" -right- "1" Language
Language "*" -right- "1" Capability

FeatureResult "*" -right- "1" FeatureSetResult
FeatureSetResult "*" -right- "1" GroupResult
GroupResult "*" -right- "1" LanguageResult
LanguageResult "*" -right- "1" CapabilityResult

FeatureResult "1" - "1" Feature
FeatureSetResult "1" - "1" FeatureSet
GroupResult "1" - "1" Group
LanguageResult "1" - "1" Language
CapabilityResult "1" - "1" Capability

hide empty members
hide empty methods
hide circle

skinparam monochrome true
skinparam shadowing false
skinparam packageStyle rect
@enduml
